k8s/resources/rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: rabbitmq
  name: rabbitmq
  namespace: nf-etl
spec:
  replicas: 1
  selector:
    matchLabels:
      service: rabbitmq
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        network/nfetl: "true"
        service: rabbitmq
    spec:
      containers:
        - env:
            - name: RABBITMQ_DEFAULT_PASS
              value: guest
            - name: RABBITMQ_DEFAULT_USER
              value: guest
          image: rabbitmq:3-management-alpine
          name: rabbitmq
          ports:
            - containerPort: 5672
            - containerPort: 15672
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/rabbitmq
              name: rabbitmq-data
            - mountPath: /var/log/rabbitmq
              name: rabbitmq-logs
      restartPolicy: Always
      volumes:
        - name: rabbitmq-data
          persistentVolumeClaim:
            claimName: rabbitmq-data
        - name: rabbitmq-logs
          persistentVolumeClaim:
            claimName: rabbitmq-logs
