k8s/resources/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: redis
  name: redis
  namespace: nf-etl
spec:
  replicas: 1
  selector:
    matchLabels:
      service: redis
  template:
    metadata:
      labels:
        network/nfetl: "true"
        service: redis
    spec:
      containers:
        - image: redis:latest
          name: redis
          ports:
            - containerPort: 6379
      restartPolicy: Always
