k8s/resources/fastapi-application-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: fastapi-application
  name: fastapi-application
  namespace: nf-etl

spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    service: fastapi-application
  type: LoadBalancer
