k8s/resources/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: rabbitmq
  name: rabbitmq
  namespace: nf-etl
spec:
  ports:
    - name: "5672"
      port: 5672
      targetPort: 5672
    - name: "15672"
      port: 15672
      targetPort: 15672
  selector:
    service: rabbitmq
  type: LoadBalancer
