k8s/resources/nfetl-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nfetl
  namespace: nf-etl

spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              network/nfetl: "true"
  podSelector:
    matchLabels:
      network/nfetl: "true"
